spec/e2e/field/call_nonfunction_field.lit
type Foo {
  init {
    self.bar = nil
  }
}

var foo = Foo()
foo.bar = "not fn"

foo.bar() # error: [line 10] Runtime error: Can only call functions and types.
